[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Top_HUD.gd" type="Script" id=1]
[ext_resource path="res://misc/line-text-small.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.976471, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.376471, 0.364706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.945098, 1, 0.00784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.466667, 0.494118, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.266667, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.992157, 0, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.435294, 0, 0.427451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0313726, 0, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0235294, 0, 0.4, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.568627, 0, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.2, 0, 0.4, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 1, 0.0392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0.423529, 0.0470588, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="Top_HUD" type="MarginContainer"]
margin_right = 1920.0
margin_bottom = 157.0
grow_horizontal = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 157.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 35.0
margin_right = 1885.0
margin_bottom = 75.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 2.0
custom_constants/separation = 150
alignment = 1

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label7" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 7"
align = 1

[node name="Press_Start_label7" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p7" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer7/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p7" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 250.0
margin_right = 350.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 5"
align = 1

[node name="Press_Start_label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer5/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p5" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 500.0
margin_right = 600.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 3"
align = 1

[node name="Press_Start_label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p3" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 750.0
margin_right = 850.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 1"
align = 1

[node name="Press_Start_label1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
editor/display_folded = true
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
editor/display_folded = true
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p1" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 1000.0
margin_right = 1100.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 2"
align = 1

[node name="Press_Start_label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
editor/display_folded = true
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p2" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 1250.0
margin_right = 1350.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 4"
align = 1

[node name="Press_Start_label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p4" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 1500.0
margin_right = 1600.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 6"
align = 1

[node name="Press_Start_label6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer6/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p6" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
step = 1.0
value = 100.0
percent_visible = false

[node name="VBoxContainer8" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 1750.0
margin_right = 1850.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )

[node name="Label8" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_right = 100.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Player 8"
align = 1

[node name="Press_Start_label8" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8"]
visible = false
margin_top = 20.0
margin_right = 99.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "PRESS START"
align = 1

[node name="HBoxAmmo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
alignment = 1

[node name="Ammo" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8/HBoxAmmo"]
margin_left = 8.0
margin_right = 78.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo :  "

[node name="Ammo_counter" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8/HBoxAmmo"]
margin_left = 82.0
margin_right = 91.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 56.0
alignment = 1

[node name="Kills" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8/HBoxContainer"]
margin_left = 10.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score : "

[node name="num_of_kills_p8" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer8/HBoxContainer"]
margin_left = 80.0
margin_right = 89.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="NRG_bar_p8" type="ProgressBar" parent="VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_top = 60.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 15 )
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 16 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Winners_Label" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 79.0
margin_right = 1920.0
margin_bottom = 93.0
size_flags_vertical = 1
text = "WINNER"
align = 1
uppercase = true
